fix: serving : resolve 500 error remove FK and align DB schema